# py-SMART

./: .gitignore  CHANGELOG.md  DEVELOP.md  LICENSE  README.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: check.yml  publish-to-pypi.yml  publish-to-test-pypi.yml
pySMART/: __init__.py  attribute.py  device.py  device_list.py  diagnostics.py  smartctl.py  test_entry.py  testentry.py  utils.py
pySMART/interface/: __init__.py  common.py  nvme.py
pySMART/interface/ata/: __init__.py  attribute.py
pySMART/interface/nvme/: __init__.py
pySMART/interface/scsi/: __init__.py  diagnostics.py
pySMART3/: __init__.py  attribute.py  device.py  device_list.py  utils.py
tests/: README.md  __init__.py  exceptions.py  gen_devicejson.py  smartctlfile.py  test_device.py  test_device_list.py
tests/dataset/listingtests/issue_53/: _--scan-open
tests/dataset/listingtests/linux_01/: _--scan-open  _-d_nvme_--all__dev_nvme0  _-d_nvme_--all__dev_nvme0n1
tests/dataset/listingtests/linux_multiple_devices/: _--scan-open  _-d_nvme_--all__dev_nvme0  _-d_nvme_--all__dev_nvme1  _-d_sat+megaraid,60_--all__dev_bus_0
tests/dataset/listingtests/linux_usb_nvme_asmedia_issue_97/: _--scan-open
tests/dataset/listingtests/mac_01/: _--scan-open
tests/dataset/listingtests/mac_02_issue_84/: _--scan-open
tests/dataset/listingtests/win10_01/: _--scan-open  _-d_nvme_--all__dev_sda
tests/dataset/singletests/hdd_sata_issue42/: _-d_ata_--all__dev_sdau  device.json
tests/dataset/singletests/issue_37_nvme_0/: _-d_nvme_--all__dev_nvme0  device.json
tests/dataset/singletests/issue_46_nvme0/: _-d_nvme_--all__dev_nvme0  device.json
tests/dataset/singletests/issue_48_win10_mingw32_nvme/: _--scan-open  _-d_nvme_--all__dev_sda  _-d_test__dev_sda  device.json
tests/dataset/singletests/issue_49_sata/: device.json
tests/dataset/singletests/issue_50_usb_ssd/: device.json  notes.txt
tests/dataset/singletests/issue_51_scsi/: _-d_scsi_--all__dev_sdc  device.json
tests/dataset/singletests/issue_52_nvme/: _-d_nvme_--all__dev_nvme0n1  device.json
tests/dataset/singletests/issue_53_nvme/: _-d_nvme_--all__dev_nvme0  device.json
tests/dataset/singletests/issue_56_megaraid_sata/: _-d_sat+megaraid,60_--all__dev_bus_0  device.json
tests/dataset/singletests/issue_57_sas_ssd/: _-d_scsi_--all__dev_sdb
tests/dataset/singletests/issue_63_nvme/: device.json
tests/dataset/singletests/macos_ssd_0/: device.json
tests/dataset/singletests/megaraid_jbod_sas_hdd_0/: _-d_scsi_--all__dev_sdd  device.json
tests/dataset/singletests/megaraid_jbod_sas_hdd_0_issue_85/: _-d_scsi_-l_sasphy__dev_sdd  _-d_test__dev_sdd  device.json
tests/dataset/singletests/megaraid_ph_sas_hdd_0/: _-d_megaraid,44_--all__dev_bus_7  device.json
tests/dataset/singletests/megaraid_ph_sata_0/: device.json
tests/dataset/singletests/megaraid_ph_sata_hdd_0/: _-d_megaraid,16_--all__dev_bus_0  device.json
tests/dataset/singletests/megaraid_ph_sata_hdd_1_issue_56/: device.json
tests/dataset/singletests/megaraid_ph_sata_ssd_0/: _-d_megaraid,28_--all__dev_bus_0  device.json
tests/dataset/singletests/megaraid_sata_0/: _-d_megaraid,16_--all__dev_bus_0  device.json
tests/dataset/singletests/megaraid_vd_0/: _-d_scsi_--all__dev_sda  _-d_scsi_-l_background__dev_sda  _-d_test__dev_sda  device.json
tests/dataset/singletests/nvme_0/: _-d_test__dev_nvme0  device.json
tests/dataset/singletests/nvme_10_issue_73/: _--scan-open  _-d_nvme_--all__dev_sda  device.json
tests/dataset/singletests/nvme_11_issue_75/: _-d_nvme_--all__dev_sda  device.json
tests/dataset/singletests/nvme_12_issue_89/: _-d_nvme_--all__dev_nvme0  device.json
(+54 files in other folders)
