# SPDX-FileCopyrightText: 2023 Rafael Leira
# SPDX-License-Identifier: LGPL-2.1-or-later

[build-system]
requires = ["setuptools", "setuptools-scm[toml]"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pySMART*"]

[tool.setuptools_scm]
write_to = "pySMART/version.py"
local_scheme = "no-local-version"

[project]
name = "pySMART"

authors = [
    # Current maintainer & author
    { name = "Rafael Leira", email = "rafael.leira@naudit.es" },
    # Original author
    { name = "Marc Herndon", email = "Herndon.MarcT@gmail.com" },
]
license = { text = 'LGPL-2.1-or-later' }
description = 'Wrapper for smartctl (smartmontools)'
readme = "README.md"
requires-python = ">=3.8"

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Topic :: Software Development',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Libraries :: Python Modules',
]
dependencies = ["chardet", 'humanfriendly']
dynamic = ["version"]


[project.urls]
"Homepage" = "https://github.com/truenas/py-SMART"

[project.optional-dependencies]
# Requirements only needed for development
dev = ['pytest', 'pytest-cov', 'coveralls', 'pdoc']
